Bug 134373 - Javascript links are reported as "javascript not supported". They should be reported as valid.
Summary: Javascript links are reported as "javascript not supported". They should be r...
Status: RESOLVED FIXED
Alias: None
Product: klinkstatus
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Paulo Moura Guedes
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-09-20 09:52 UTC by Petr Sodomka
Modified: 2006-09-24 20:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Petr Sodomka 2006-09-20 09:52:04 UTC
Version:           0.3.0 (using KDE 3.5.2, Kubuntu Package 4:3.5.2-0ubuntu18 dapper)
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.15-23-386

When I try to linkcheck this page http://www.multiweb.cz/linktest/default.htm (content included, page also includes test for bug #134329), error is shown for link <a href="javascript:.... It's valid link which should be shown as OK. Of course, there can be some error inside javascript, but who needs the validator to try to parse it. Maybe the link should be tagged as WARNING. The user of this program then could go and to validate these links manually inside browser or change these links to something better (like <a href="..." onclick="***">. But I'm sure that javascript links are not as invalid as broken links, because broken links are always invalid and javascript links could be invalid only sometimes (when there's some error inside script).

--------- contents of the page "default.htm" ------------

<html>
<head>
</head>
<body>
<!-- this bug test -->
<p><a href="javascript:alert('hello');">hello</a></p>
<!-- bug #134329 test -->
<p><a href="#" onclick="alert('hello');">hello</a></p>
</body>
</html>
Comment 1 Paulo Moura Guedes 2006-09-24 20:59:45 UTC
SVN commit 588052 by mojo:

BUG: 134373

- Each link now has an associated status:

        UNDETERMINED,
        SUCCESSFULL,
        BROKEN,
        HTTP_REDIRECTION,
        HTTP_CLIENT_ERROR,
        HTTP_SERVER_ERROR,
        TIMEOUT,
        NOT_SUPPORTED,
        MALFORMED

that is clearly set after it being checked, which didn't happen before.
This fixes bug #134373 which was caused by a typo btw.

Also fix some failed assertions; there were some code paths in LinkChecker that weren't properly managed.

 M  +10 -10    klinkstatus.kdevelop  
 M  +55 -21    src/engine/linkchecker.cpp  
 M  +3 -1      src/engine/linkchecker.h  
 M  +4 -1      src/engine/linkstatus.cpp  
 M  +19 -4     src/engine/linkstatus.h  
 M  +19 -10    src/engine/linkstatus_impl.h  
 M  +10 -9     src/engine/searchmanager.cpp  
 M  +13 -21    src/ui/resultview.cpp  
 M  +1 -1      src/ui/sessionwidget.cpp  
 M  +39 -95    src/ui/treeview.cpp