BUG: 134373

- Each link now has an associated status:

        UNDETERMINED,
        SUCCESSFULL,
        BROKEN,
        HTTP_REDIRECTION,
        HTTP_CLIENT_ERROR,
        HTTP_SERVER_ERROR,
        TIMEOUT,
        NOT_SUPPORTED,
        MALFORMED

that is clearly set after it being checked, which didn't happen before.
This fixes bug #134373 which was caused by a typo btw.

Also fix some failed assertions; there were some code paths in LinkChecker that weren't properly managed.

svn path=/branches/KDE/3.5/kdewebdev/klinkstatus/; revision=588052