src/ui/sessionwidget.cpp
@@ -501,7 +501,7 @@ void SessionWidget::showBottomStatusLabel(QListViewItem * item)
     TreeViewItem* _item = tree_view->myItem(item);
     if(_item)
     {
-        QString status = _item->linkStatus()->status();
+        QString status = _item->linkStatus()->statusText();
         textlabel_status->setText(status);
 
         if(textlabel_status->sizeHint().width() > textlabel_status->maximumWidth())
